--- a/src/components/Terminal.css
+++ b/src/components/Terminal.css
@@ -1,7 +1,7 @@
 .Terminal {
     background: #000000; 
     width: 40vw;
-    height: 25vw;
+    height: 20vw;
 
     padding: 15px;
     border-radius: 5px;
@@ -14,6 +14,11 @@
     height: 100%;
 
     text-align: left;
+    word-break: normal !important;
+    word-wrap: normal !important;
+    white-space: pre !important;
+
+    overflow: auto;
 
     margin: 0;
 
@@ -26,6 +31,8 @@
 
     border: none;
     outline: none;
+
+    font-family: 'Courier New', Courier, monospace;
 
     margin: 10px 0 0 -15px;
 
