--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,3 +1,25 @@
 .Project {
+    background-color: #35333dfd;
 
+    font-family: "Poppins";
+    font-weight: 300;
+
+    width: fit-content;
+    height: auto;
+
+    padding: 15px;
+
+    border: solid;
+    border-color: #999999;
+    border-width: 1px;
+    border-radius: 8px;
+}
+
+.github {
+    text-decoration: none; 
+    color: #ffffff;
+}
+
+.github:hover {
+    color: #a1a1a1;
 }
