--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
 
 
 body {
-  background: #06090f;
+  /* background: #f5f5f5; */
+  background: #FEC0CE;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
 
