--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,6 +4,7 @@
 
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .container {
@@ -23,4 +24,11 @@
     text-align: center;
 
     font-size: 19px;
+}
+
+.hex {
+    position: absolute;
+    z-index: -1;
+
+    fill: blue;
 }
