--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,11 +2,21 @@
     display: flex;
     width: 100%;
     height: 30px;
-    padding: 5px 0 20px 0;
-    background: #141920;
+    padding: 0 0 30px 0;
+    background: #ffffff;
+
+    margin: -3px -3px 0 -3px;
+
+    border: solid;
+    border-width: 3px;
+    border-color: #8B5FBF;
     box-shadow: 1px 1px 1px #6868684d;
 
+    font-family: "Poppins";
+    font-weight: 300;
+
     position: fixed;
+    z-index: 2;
 }
 
 .Navbar ul {
@@ -22,12 +32,27 @@
 
 .Navbar ul li {
     list-style-type: none;
-    color: #ffffff;
+    color: #000000;
     padding: 0 25px 0 25px;
 }
 
 .Navbar ul li a {
     text-decoration: none;
-    color: #ffffff;
+    color: #000000;
     font-size: 18px;
+}
+
+.github-link {
+    margin-top: -7px;
+    font-size: 30px;
+}
+
+.github-link a {
+    color: #8B5FBF;
+    text-decoration: none;
+}
+
+.github-link a:hover {
+    color: #FEC0CE;
+    transition: 0.15s;
 }
