--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,18 +1,21 @@
 .Project {
-    background-color: #35333dfd;
 
-    font-family: "Poppins";
-    font-weight: 300;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
 
     width: fit-content;
     height: auto;
 
     padding: 15px;
 
-    border: solid;
-    border-color: #999999;
-    border-width: 1px;
-    border-radius: 8px;
+}
+
+.project-title {
+
+}
+
+.project-desc {
+
 }
 
 .github {
