Minor updates to Project component

--- a/src/components/Code.css
+++ b/src/components/Code.css
@@ -1,9 +1,9 @@
 .Code pre {
     width: 80%;
 
-    /* background: #8B5FBF;  */
-    background: #9198e5;
-    background: radial-gradient(circle, #9198e5 0%, #8B5FBF 100%);
+    /* background: #8b5fbf;  */
+    background: #b891e5;
+    background: radial-gradient(circle, #b891e5 0%, #8b5fbf 100%);
     border-radius: 5px;
     border: none;
 
