--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,5 +1,4 @@
 .Project {
-
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
 
@@ -7,11 +6,25 @@
     height: auto;
 
     padding: 15px;
+    margin: 15px;
 
+    justify-content: left;
+    text-align: left;
+
+    background: #9a6ecc;
+    background: radial-gradient(circle, #9a6ecc 0%, #8b5fbf 100%);
+
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    -webkit-font-smoothing: antialiased;
+
+    border-radius: 7px;
 }
 
 .project-title {
-
+    padding: 5px;
+    font-style: italic;
 }
 
 .project-desc {
@@ -19,8 +32,19 @@
 }
 
 .github {
-    text-decoration: none; 
     color: #ffffff;
+    margin: 10px;
+    text-align: right;
+    font-weight: bold;
+}
+
+.github a {
+    text-decoration: none;
+    color: goldenrod;
+}
+
+.github a:hover {
+    text-decoration: underline;
 }
 
 .github:hover {
