--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 body {
   /* background: #f5f5f5; */
+  background: #b9acad;
   background: #FEC0CE;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
