--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -2,8 +2,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
 
-    width: fit-content;
-    height: auto;
+    /*width: fit-content;*/
+    width: 25%;
+    height: fit-content;
 
     padding: 15px;
     margin: 15px;
@@ -13,8 +14,10 @@
 
     background: #9a6ecc;
     background: radial-gradient(circle, #9a6ecc 0%, #8b5fbf 100%);
+    box-shadow: 3px 3px 5px #00000062;
 
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
+    font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
     font-size: 18px;
     -webkit-font-smoothing: antialiased;
@@ -25,6 +28,7 @@
 .project-title {
     padding: 5px;
     font-style: italic;
+    text-decoration: underline;
 }
 
 .project-desc {
@@ -40,7 +44,7 @@
 
 .github a {
     text-decoration: none;
-    color: goldenrod;
+    color: white;
 }
 
 .github a:hover {
