--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,8 @@
 
 
 body {
-  /* background: #f5f5f5; */
-  background: #b9acad;
-  background: #FEC0CE;
+  background: #f5f5f5;
+  /* background: #FEC0CE; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
 
