--- a/src/components/Code.css
+++ b/src/components/Code.css
@@ -2,10 +2,12 @@
     width: 80%;
 
     /* background: #8b5fbf;  */
-    background: #b891e5;
-    background: radial-gradient(circle, #b891e5 0%, #8b5fbf 100%);
+    background: #ececec;
+    background: radial-gradient(circle, #c0c0c0, 0%, #f1f1f1 100%);
     border-radius: 5px;
     border: none;
+
+    box-shadow: 1px 3px 3px #80808062;
 
     margin: auto auto 20px auto;
     padding: 10px;
@@ -17,7 +19,7 @@
     text-align: left;
 
     font-size: 18px;
-    color: #fff;
+    color: #000;
     outline: none;
 
     resize: none;
