--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -7,10 +7,20 @@
     flex-wrap: wrap;
 }
 
+.project-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .container {
     width: 50vw; 
     margin: 0 auto 0 auto;
+    display: flex;
+    flex-wrap: nowrap;
     padding: 25px;
+    align-items: center;
+    justify-content: center;
 }
 
 .paragraph {
@@ -31,4 +41,8 @@
     z-index: -1;
 
     fill: blue;
+}
+
+.Code {
+    min-width: 20vw;
 }
