--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -2,9 +2,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
 
-    /*width: fit-content;*/
-    width: 25%;
-    height: fit-content;
+    width: fit-content;
+    max-width: 25vw;
+    height: auto;
 
     padding: 15px;
     margin: 15px;
@@ -12,23 +12,37 @@
     justify-content: left;
     text-align: left;
 
-    background: #9a6ecc;
-    background: radial-gradient(circle, #9a6ecc 0%, #8b5fbf 100%);
-    box-shadow: 3px 3px 5px #00000062;
+    /* background: #9a6ecc; */
+    background: #ececec;
+    /* background: radial-gradient(circle, #9a6ecc 0%, #8b5fbf 100%); */
+    background: radial-gradient(circle, #c0c0c0, 0%, #f1f1f1 100%);
 
-    /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
-    font-family: 'Courier New', Courier, monospace;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     font-size: 18px;
     -webkit-font-smoothing: antialiased;
 
+    color: #000;
+    box-shadow: 1px 3px 3px #80808062;
+
     border-radius: 7px;
+}
+
+.language {
+    font-size: 15px;
+    align-items: center;
+    display: flex;
+}
+
+.lang-icon {
+    width:20px;
+    height:20px;
+    margin-right: 3px;
 }
 
 .project-title {
     padding: 5px;
     font-style: italic;
-    text-decoration: underline;
 }
 
 .project-desc {
@@ -36,7 +50,8 @@
 }
 
 .github {
-    color: #ffffff;
+    /* color: #ffffff; */
+    color: #000;
     margin: 10px;
     text-align: right;
     font-weight: bold;
@@ -44,7 +59,7 @@
 
 .github a {
     text-decoration: none;
-    color: white;
+    color: goldenrod;
 }
 
 .github a:hover {
