--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,8 +9,8 @@
 
     border: solid;
     border-width: 3px;
-    border-color: #8B5FBF;
-    box-shadow: 1px 1px 1px #6868684d;
+    border-color: #ffffff;
+    box-shadow: 1px 1px 5px #6868684d;
 
     font-family: "Poppins";
     font-weight: 300;
