--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -15,7 +15,7 @@
     /* background: #9a6ecc; */
     background: #ececec;
     /* background: radial-gradient(circle, #9a6ecc 0%, #8b5fbf 100%); */
-    background: radial-gradient(circle, #c0c0c0, 0%, #f1f1f1 100%);
+    background: radial-gradient(circle, #c0c0c0, 0%, #ebebeb 100%);
 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
@@ -47,6 +47,19 @@
 
 .project-desc {
 
+}
+
+.demo {
+    /* color: #ffffff; */
+    color: #000;
+    margin: 10px;
+    text-align: right;
+    font-weight: bold;
+}
+
+.demo a {
+    text-decoration: none;
+    color: #1c2939;
 }
 
 .github {
