--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -28,10 +28,18 @@
     border-radius: 7px;
 }
 
+.bottom-container {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
 .language {
     font-size: 15px;
     align-items: center;
     display: flex;
+    width: fit-content;
+    margin-left: 0;
+    margin-right: auto;
 }
 
 .lang-icon {
@@ -46,15 +54,17 @@
 }
 
 .project-desc {
-
+    font-weight: 300;
 }
 
 .demo {
     /* color: #ffffff; */
     color: #000;
     margin: 10px;
-    text-align: right;
     font-weight: bold;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: 0;
 }
 
 .demo a {
