--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
 
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
   color: #ffffff;
+}
+
+body::-webkit-scrollbar {
+  display: none
 }
